# helios

./: .gitignore  CMakeLists.txt  LICENSE.txt
source/: main.cpp
source/camera/: camera.cpp  camera.h
source/geometry/: box.cpp  box.h  collidable.h  drawable.h  object.h  plane.cpp  plane.h  primitive.h  sphere.cpp  sphere.h
source/image/: image.cpp  image.h  ppm_image.cpp  ppm_image.h
source/light/: light.h
source/material/: material.cpp  material.h
source/math/matrix/: mat4.cpp  mat4.h
source/math/quaternion/: quaternion.cpp  quaternion.h
source/math/ray/: ray.cpp  ray.h
source/math/vector/: vec3.cpp  vec3.h
source/renderer/: lighting_model.h  ray_tracer.cpp  ray_tracer.h  renderer.h  shader.cpp  shader.h
source/scene/: scene.cpp  scene.h
source/threading/: thread_pool.cpp  thread_pool.h
source/utils/: utils.cpp  utils.h
